guestbook/guestbook-nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guestbook-nginx
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: guestbook-nginx
  template:
    metadata:
      labels:
        app: guestbook-nginx
    spec:
      readinessGates:
      - conditionType: "https://httpstat.us/200"
      containers:
      - name: nginx
        image: nginx
        ports:
          - containerPort: 80
        # readinessProbe:
        #   initialDelaySeconds: 1
        #   periodSeconds: 2
        #   timeoutSeconds: 1
        #   successThreshold: 1
        #   failureThreshold: 1
        #   httpGet:
        #     host:
        #     scheme: HTTP
        #     path: /foo  
        #     httpHeaders:
        #       - name: Host
        #         value: myapplication1.com
        #     port: 80
